differentials 3d: fixed title Translatez and and z-index; and fixed hover on it

--- a/assets/css/3d-card.css
+++ b/assets/css/3d-card.css
@@ -1,5 +1,5 @@
 
-.card__element{
+.card *{
     perspective: 1000px;
 }
 .card{
